--- a/src/App.scss
+++ b/src/App.scss
@@ -15,13 +15,13 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 p {
-    line-height: 30px;
-    text-align: justify;
-    font-size: 1.3rem;
-    word-spacing: 3px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+  line-height: 30px;
+  text-align: justify;
+  font-size: 1.3rem;
+  word-spacing: 3px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 .underline {
   text-decoration: underline;
   text-decoration-color: $primary-yellow;
@@ -46,7 +46,7 @@ p {
 }
 
 .hero {
-    min-height: 100vh;
+  min-height: 100vh;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -58,7 +58,7 @@ p {
     flex-wrap: wrap;
     font-weight: light;
     span {
-      margin-right: 20px;
+      width: 400px;
     }
   }
   .article {
@@ -72,50 +72,45 @@ p {
         text-indent: 10px;
       }
     }
-
-   
   }
 }
 
-small{
-    color: $primary-blue;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    font-weight: bold;
+small {
+  color: $primary-blue;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
-.aboutWork, .cv{
-    padding: 1rem;
-    display:grid ;
-    flex-direction: column;
-    .about{
-        margin-bottom: 20px;
+.aboutWork,
+.cv {
+  padding: 1rem;
+  display: grid;
+  flex-direction: column;
+  .about {
+    margin-bottom: 20px;
+  }
+  .about2,
+  .about3 {
+    margin-bottom: 20px;
+    h3 {
+      margin-bottom: 20px;
     }
-    .about2,.about3{
-        margin-bottom: 20px;
-        h3{
-            margin-bottom: 20px;
-        }
-        p{
-            color: $soft-text-color;
-            margin-bottom: 20px;
-        }
-        
+    p {
+      color: $soft-text-color;
+      margin-bottom: 20px;
     }
+  }
 }
-
-
-
-
 
 ///profile image
 ///
 ///
 //
-.icons> img{
-    width: 40px;
-    height: 40px;
-    margin-right: 5px;
+.icons > img {
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
 }
 .react-icon {
   font-weight: bold;
@@ -136,38 +131,36 @@ small{
   width: 50vw;
 }
 
-.faq,.education{
-    padding: 1rem;
+.faq,
+.education {
+  padding: 1rem;
 }
-.accordion{
-    
-    margin: 20px auto;
-    display: flex;
-    flex-direction: column;
-    .accordionItem{
-        .accordion-header{
-            font-size: 0.7rem;
-            padding: 20px ;
-            font-weight: 400;
-            display: flex;
-            justify-content: space-between;
-            button{
-                background-color: transparent;
-                border: none;
-                outline: none;
-                font-size: 1.4rem;
-                color: grey;
-            }
-        }
-        .accordion-info{
-            color: #78716C;
-            font-size: 0.5rem;
-            overflow: hidden;
-        }
+.accordion {
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  .accordionItem {
+    .accordion-header {
+      font-size: 0.7rem;
+      padding: 20px;
+      font-weight: 400;
+      display: flex;
+      justify-content: space-between;
+      button {
+        background-color: transparent;
+        border: none;
+        outline: none;
+        font-size: 1.4rem;
+        color: grey;
+      }
     }
+    .accordion-info {
+      color: #78716c;
+      font-size: 0.5rem;
+      overflow: hidden;
+    }
+  }
 }
-
-
 
 @media screen and (min-width: 400px) {
   .hero {
@@ -193,23 +186,25 @@ small{
 }
 
 @media screen and (min-width: 770px) {
-    .container{
-        padding: 2rem;
+  .container {
+    padding: 2rem;
+  }
+
+ 
+  .aboutWork {
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    .about {
+      max-width: 60vw;
+      grid-column: 1/-1;
     }
-        .aboutWork{
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            .about{
-                max-width: 60vw;
-                grid-column: 1/-1;
-            }
-        }
-        .cv{
-            max-width: 70vw;
-            margin-left: auto;
-            text-align: right;
-        }
-        .accordion{
-            width: 50vw;
-        }
+  }
+  .cv {
+    max-width: 70vw;
+    margin-left: auto;
+    text-align: right;
+  }
+  .accordion {
+    width: 50vw;
+  }
 }
