--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -29,6 +29,7 @@ footer {
       padding: 20px;
       width: 60%;
       display: flex;
+      text-align: left;
       flex-direction: column;
       justify-content: center;
       align-items: start;
